# eqloader-python

./: Cargo.toml  LICENSE  README.md  pyproject.toml
blender/: door.py
blender/addons/blender_eqloader_addon/: .gitignore  __init__.py
blender/addons/blender_eqloader_addon/blender_eqloader/: __init__.py  actors.py  blender_util.py  build_peq_data.py  image.py  material.py  mesh.py  zone.py
python/blender_eqloader/: __init__.py
python/eqloader/: __init__.py  __main__.py  eqloader.pyi  extract.py
python/tests/: test_all.py
python/tests/fixtures/: .gitignore
src/: bmp.rs  lib.rs  wld.rs
src/fragments/: actordef.rs  actorinst.rs  material.rs  mesh.rs  mod.rs
src/util/: mod.rs
