[package]
name = "blender-eqloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blender_eqloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
libeq_wld = { git = "https://github.com/cjab/libeq.git", branch = "master" }
libeq_archive = { git = "https://github.com/cjab/libeq.git", branch = "master" }