[package]
name = "eqloader-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eqloader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
libeq_wld = { git = "https://github.com/cjab/libeq.git", branch = "master" }
libeq_archive = { git = "https://github.com/cjab/libeq.git", branch = "master" }
image = { version="0.*", default-features = false, features=["bmp"]}
owning_ref = "0.*"
num-quaternion = "1.*"
serde = { version = "1", optional = true }
serde_json = {version = "1", optional = true}

[features]
serde = ["dep:serde", "dep:serde_json", "libeq_wld/serde"]